fixed the problem of wave covering the surroundin gitems

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -620,3 +620,14 @@ iframe {
     display: none;
   }
 }
+@media only screen and (max-height: 750px) {
+  .wave {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0px;
+    background: url(../img/wave.png);
+    background-size: 1000px 0px;
+  }
+}
